fix: widen .block2 to prevent row wrapping; close UI on mercenary deletion
- Increase .block2 width from 100px to 170px so Time Left/Kills/Faith
  values don't wrap to new rows and canvas doesn't overlap
- Hide MercenaryInformations and SkillListMH windows when user confirms
  mercenary deletion

--- a/src/UI/Components/MercenaryInformations/MercenaryInformations.css
+++ b/src/UI/Components/MercenaryInformations/MercenaryInformations.css
@@ -227,7 +227,7 @@
 	position: absolute;
 	top: 105px;
 	left: 100px;
-	width: 100px;
+	width: 170px;
 	height: 70px;
 }
 
